- Fixed data writing issue for articles - Implemented Selenium for gathering full text

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ __pycache__/funtion_breakout.cpython-311.pyc
 extentions/bypass_paywalls_clean-3.2.0.0.xpi
 extentions/uBlock0_1.50.1b6.firefox.signed.xpi
 geckodriver.log
+testing.html
