--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 database.csv
 __pycache__/funtion_breakout.cpython-311.pyc
+testing_html/*
 extentions/bypass_paywalls_clean-3.2.0.0.xpi
 extentions/uBlock0_1.50.1b6.firefox.signed.xpi
 geckodriver.log
